@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         DBIx-Recordset
-version:      0.25
+version:      0.25a
 version_from: Recordset.pm
 installdirs:  site
 requires:
